
[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.77.1"
license = "MIT OR Apache-2.0"
repository = ""
categories = ["solana"]
keywords = ["lp-locker"]
authors = ["UNCX Network"]
homepage = "<UNCX SITE>"
[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
solana-program = "1.18.17"
anchor-lang = { git = "https://github.com/nabeel99/anchor", rev = "6e58277f15b4dd30fbc01acdce74f24bf10c5e80" }
anchor-spl = { git = "https://github.com/nabeel99/anchor", rev = "6e58277f15b4dd30fbc01acdce74f24bf10c5e80" }
solana-account-decoder = "1.18.17"
solana-client = "1.18.17"
solana-logger = "1.18.17"
solana-program-test = "1.18.17"
solana-rpc = "1.18.17"
solana-sdk = "1.18.17"
spl-associated-token-account = "1.0.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
